--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,164 +1,40 @@
-version: 2
-
+version: 2.1
 jobs:
   build:
+    working_directory: ~/code
     docker:
-      - image: circleci/openjdk:8-jdk
-      - image: gcr.io/gapic-showcase/gapic-showcase:0.0.12
-    working_directory: ~/gax-kotlin
+      - image: circleci/android:api-30
+      - image: 'circleci/openjdk:11-jdk'
+    environment:
+      # Customize the JVM maximum heap limit
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
     steps:
       - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
       - run:
-          name: "Checkout submodules"
-          command: |
-            git submodule init
-            git submodule update
-      - restore_cache: &kgax-key
-          key: kgax-{{ checksum "build.gradle.kts" }}-{{ checksum "kgax-core/build.gradle.kts" }}-{{ checksum "kgax-grpc-base/build.gradle.kts" }}-{{ checksum "kgax-grpc/build.gradle.kts" }}-{{ checksum "kgax-grpc-android/build.gradle.kts" }}
-      - run: 
+          name: chmod permissions
+          command: chmod +x ./gradlew
+      - run:
           name: Download Dependencies
-          command: ./gradlew dependencies
-      - save_cache:
-          <<: *kgax-key
-          paths:
-            - ~/.gradle
-      - run:
-           name: Build and run checks
-           command: ./gradlew build
-      - run: 
-          name: Save test results
-          command: |
-            mkdir -p ~/junit/
-            find . -type f -regex ".*/build/test-results/.*xml" -exec cp {} ~/junit/ \;
-          when: always
-      - store_test_results:
-          path: ~/junit
-      - store_artifacts:
-          path: ~/junit        
-      - run: 
-          name: Codecov
-          command: bash <(curl -s https://codecov.io/bash)
-          when: always
-
-  build_android_examples:
-    working_directory: ~/gax-kotlin/examples-android
-    docker:
-      - image: circleci/android:api-28-alpha
-    environment:
-      JVM_OPTS: -Xmx3200m
-    steps:
-      - checkout:
-          path: ~/gax-kotlin
-      - run:
-          name: "Checkout submodules"
-          command: |
-            git submodule init
-            git submodule update
-      - restore_cache: &android-example-key
-          key: example-android-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-          name: Download dependencies
           command: ./gradlew androidDependencies
       - save_cache:
-          <<: *android-example-key
           paths:
             - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
       - run:
-          name: Create placeholder key
-          command: touch app/src/main/res/raw/sa.json
-      - run:
-          name: Run checks
-          command: ./gradlew build
+          name: Run Tests
+          command: ./gradlew lint test
       - store_artifacts:
-          path: app/build/reports
+          path: app/build/report
           destination: reports
       - store_test_results:
           path: app/build/test-results
 
-  # -------------------------------------------------------------------------------
-  # Tests - Integration (Cloud)
-  # -------------------------------------------------------------------------------
-
-  test_cloud_examples:
-    docker:
-      - image: circleci/openjdk:8-jdk
-    working_directory: ~/gax-kotlin
-    steps:
-      - checkout
       - run:
-          name: "Checkout submodules"
-          command: |
-            git submodule init
-            git submodule update
-      - restore_cache:
-          <<: *kgax-key
-      - run:
-          name: Download dependencies
-          command: ./gradlew dependencies
-      - run:
-          name: Run all examples
-          command: |
-            echo $GCLOUD_SERVICE_KEY > /tmp/_key.json
-            export CREDENTIALS=/tmp/_key.json
-            export PROJECT=$GCLOUD_PROJECT_ID
-            ./gradlew examples:run --args language
-            ./gradlew examples:run --args speech
-      - run:
-          command: rm /tmp/_key.json
-          when: always
-
-
-  test_android_examples:
-    working_directory: ~/gax-kotlin/examples-android
-    docker:
-      - image: circleci/android:api-28-alpha
-    environment:
-      JVM_OPTS: -Xmx3200m
-    steps:
-      - checkout:
-          path: ~/gax-kotlin
-      - run:
-          name: "Checkout submodules"
-          command: |
-            git submodule init
-            git submodule update
-      - restore_cache:
-          <<: *android-example-key
-      - run:
-          name: Build debug APK and release APK
-          command: |
-            echo $GCLOUD_SERVICE_KEY > app/src/main/res/raw/sa.json
-            ./gradlew assembleDebug assembleDebugAndroidTest
-      - run:
-          name: Run all examples
-          command: |
-            sudo gcloud auth activate-service-account --key-file=app/src/main/res/raw/sa.json
-            sudo gcloud --quiet config set project $GCLOUD_PROJECT_ID
-            sudo gcloud firebase test android run --app app/build/outputs/apk/debug/app-debug.apk --test app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk
-      - run:
-          command: rm app/src/main/res/raw/sa.json
-          when: always
-
-# -------------------------------------------------------------------------------
-# CI Workflow
-# -------------------------------------------------------------------------------
-
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - build_android_examples
-      - test_cloud_examples:
-          requires:
-            - build
-          filters: &master-filter
-            branches:
-              only: master
-            tags:
-              only: /.*/
-      - test_android_examples:
-          requires:
-            - build_android_examples
-          filters:
-            <<: *master-filter
+          name: Initial build
+          command: ./gradlew clean assembleRelease --no-daemon --stacktrace
+      - store_artifacts:
+          path: app/build/outputs/apk/
+          destination: apks/
